--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "backend_dev": "cd server && npm run develop",
     "frontend_dev": "cd client && npm run start",
-    "start": "concurrently \"npm run backend_dev\" \"npm run frontend_dev\""
+    "start": "concurrently \"npm run backend_dev\" \"npm run frontend_dev\"",
+    "heroku-postbuild": "cd client && npm install && npm run build && cd ../server && npm install && npm run build"
   },
   "keywords": [],
   "author": "",
